<resources>
    <string name="app_name" translatable="false">RajPusht</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="radioselecteng">English</string>
    <string name="radioselecthin">Hindi</string>
    <string name="set_location">Select AWC </string>
    <string name="set_language">Select Language</string>
    <string name="basicq1">Name of the Woman</string>
    <string name="basicq1_1">Name of Husband/Father</string>
    <string name="basicq1_2">Enter PCTS-ID</string>
    <string name="basicq3">Mobile number</string>
    <string name="basicq4">UID</string>
    <string name="basicq5">Bhamashah No.</string>
    <string name="basicq6">Aadhar No.  </string>
    <string name="adhar1">if aadhar card not available</string>
    <string name="adhar2">Aadhar Enrolment No.</string>
    <string name="adhar3">Date Stamp</string>
    <string name="adhar4">Time Stamp</string>
    <string name="adhar5">Date of Birth </string>
    <string name="basicq7">Age (in completed years)</string>
    <string name="basicq8">What is your religion?</string>
    <string-array name="array_Religion">
        <item>--Select Options--</item>
        <item>Hindu</item>
        <item>Muslim</item>
        <item>Christian</item>
        <item>Sikh</item>
        <item>Jain</item>
        <item>Parsi</item>
        <item>Buddhist</item>
        <item>No religion</item>
    </string-array>
    <string name="basicq9">Do you belong to a scheduled caste, scheduled tribe, other backward class, or none of these ?</string>
    <string-array name="array_cast">
        <item>--Select Options--</item>
        <item>Scheduled Caste</item>
        <item>Scheduled Tribe</item>
        <item>OBC</item>
        <item>General</item>
    </string-array>
    <string-array name="array_rationcardColor">
        <item>--Select Options--</item>
        <item>Blue/Green (APL)</item>
        <item>Dark Pink (BPL)</item>
        <item>Yellow (Antodyaya/Poorest)</item>
        <item>No card</item>
    </string-array>
    <string name="basicq11">What is your relationship with the head of the household ?</string>
    <string-array name="array_relationshipHead">
        <item>--Select Options--</item>
        <item>Head</item>
        <item>Wife</item>
        <item>Daughter</item>
        <item>Daughter in law</item>
        <item>GrandChild</item>
        <item>Mother</item>
        <item>Sister</item>
        <item>Sister in Law</item>
        <item>Aunt</item>
        <item>Niece</item>
        <item>Other Relative</item>
    </string-array>
    <string name="basicq12">What type of family do you live in ?</string>
    <string-array name="array_typeFamily">
        <item>--Select Options--</item>
        <item>Nuclear Family</item>
        <item>Joint Family</item>
        <item>Other</item>
    </string-array>
    <string name="basicq13">Highest education completed</string>
    <string-array name="array_education">
        <item>--Select Options--</item>
        <item>No Schooling/illiterate</item>
        <item>Primary Education(upto class 4)</item>
        <item>Middle School (upto class 8)</item>
        <item>High School (upto class 10)</item>
        <item>Higher Secondary (10 + 2)</item>
        <item>Undergrad/ Bachelors/ Prof degree</item>
        <item>Master degree and above</item>
    </string-array>
    <string name="basicq14">What type of fuel does your household most commonly use for cooking ?</string>
    <string-array name="array_fuelSelection">
        <item>--Select Options--</item>
        <item>Wood</item>
        <item>Crop residue</item>
        <item>Dung cakes</item>
        <item>Coal / Charcoal</item>
        <item>Kerosene / Diesel</item>
        <item>Electricity</item>
        <item>Liquified Petroleum gas / PNG</item>
        <item>Bio-gas</item>
        <item>Others</item>
    </string-array>
    <string name="basicq15">In your household, who usually makes decision for visiting doctor when your child is sick</string>
    <string name="basicq15a">(a)Visiting doctor for your own health</string>
    <string name="basicq15b">(b)Visiting doctor for your child’s health</string>
    <string-array name="array_decsion">
        <item>--Select Options--</item>
        <item>Self</item>
        <item>Husband</item>
        <item>Mother in law</item>
        <item>Father in law</item>
        <item>Someone else in the family</item>
        <item>Other relative</item>
    </string-array>
    <string-array name="array_decsion_child">
        <item>--Select Options--</item>
        <item>Self</item>
        <item>Husband</item>
        <item>Mother in law</item>
        <item>Father in law</item>
        <item>Someone else in the family</item>
        <item>Other relative</item>
        <item>Beneficiary has no child </item>
    </string-array>
    <string name="basicq16">Which type of account do you have in your name ?</string>
    <string name="basicq16a">Bank Account</string>
    <string name="basicq16a1">Bank Details</string>
    <string name="basicq16a2">Name of account holder</string>
    <string name="confirmbasicq16a2">Confirm Name of account holder </string>
    <string name="basicq16a3">Name of bank</string>
    <string name="basicq16a4">Branch name</string>
    <string name="basicq16a5">Account number</string>
    <string name="confirmbasicq16a5">Confirm Account number </string>
    <string name="basicq16a6">IFSC code</string>
    <string name="confirmbasicq16a6">Confirm IFSC code</string>
    <string name="basicq16a7">Distance of the nearest bank branch (in Km)</string>
    <string name="basicq16a8">Distance of the nearest ATM (in Km)</string>
    <string name="basicq16b">Post Office Account</string>
    <string name="basicq16b1">Post Office Account Details</string>
    <string name="basicq16b2">Name of post office in which account is held</string>
    <string name="basicq16b3">Address of post office</string>
    <string name="basicq16b4">Post office account number</string>
    <string name="basicq16b5">Post office pincode</string>
    <string name="confirmpostaccount">Confirm Post office Account Number</string>
    <string name="confirmpostpincode">Confirm Post office Pincode</string>
    <string name="basicq16c">No Account</string>
    <string name="pd1">How many pregnancies did you have before the current pregnancy ?</string>
    <string name="pd2">LMP (Last menstrual Period) Date.
The LMP Date should be the FIRST day of the LAST menstrual period.  DO NOT count the first day when she first missed her period. Help the woman to remember the date by associating it with major events in the village such as puja, festival, etc
</string>
    <string name="ym1">Name of the child</string>
    <string name="ym2">Date of delivery of the Child</string>
    <string name="ym3">Place of delivery</string>
    <string-array name="array_birthplace">
        <item>--Select Options--</item>
        <item>Hospital/ PHC/CHC/ Private clinic</item>
        <item>Home</item>
    </string-array>
    <string name="ym4">Order of birth of the child</string>
    <string name="ym5">Sex of the child</string>
    <string-array name="array_childgender">
        <item>--Select Options--</item>
        <item>Male</item>
        <item>Female</item>
        <item>Intersex</item>
    </string-array>
    <string name="ym6">Birth weight of the child</string>
    <string name="ym7">Was this child born before completing the full-term? (9 months 10 days)</string>
    <string-array name="array_birthbefore9month">
        <item>--Select Options--</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="ym8">After birth, when did you FIRST put your child to breast ?</string>
    <string-array name="array_childtobreast">
        <item>--Select Options--</item>
        <item>Within one hour of birth</item>
        <item>Within seven hours of birth</item>
        <item>Within the first 24 hours of birth</item>
        <item>Between 1-3 days of birth</item>
        <item>Between 3-7 days of birth</item>
        <item>7 days after birth</item>
    </string-array>
    <string name="ym9">Did you feed your child the first yellow, thick breast milk (khees) ? </string>
    <string-array name="array_khees">
        <item>--Select Options--</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="pw1q1">In the last three months, were you counseled by an NGO/ASHA or a health worker on what to eat and how much during your pregnancy? </string>
    <string-array name="array_counseledNGOASHApw">
        <item>--Select Options--</item>
        <item>Yes</item>
        <item>No</item>

    </string-array>
    <string name="pw1q2">In the last three months, were you counseled by an NGO/ASHA or a health worker on how to feed your infant after delivery, how and when to breastfeed, what to feed the child in the first six months, etc.? </string>
    <string-array name="array_ngofeedinfant">
        <item>--Select Options--</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="pw1q3">On an average, how much does your entire household spend per month on buying foods and food items ?</string>
    <string name="b1"><b>1. Do you have a bank account in your name?(YES/NO)</b></string>
    <string name="b1_1"><b>(If NO, please facilitate the opening of bank account for the respondent):</b></string>
    <string name="b2"><b>2. Name of the account holder (as appearing in bank records):</b></string>
    <string name="b3"><b>3. Name of the Bank in which account is held:</b></string>
    <string name="b4"><b>4. Branch Name:</b></string>
    <string name="b5"><b>5. Account Number:</b></string>
    <string name="b6"><b>6. IFSC Code:</b></string>
    <string name="hb2">Enter account holder\'s name</string>
    <string name="hb3">Enter name of the bank</string>
    <string name="hb4">Enter branch name</string>
    <string name="hb5">Enter account number</string>
    <string name="hb6">Enter IFSC code</string>
    <string name="cc1"><b>1. ANC Details (Last ANC entered in Mamta Card)</b></string>
    <string name="cc1_2"><b>Date of Last ANC as per Mamta Card</b></string>
    <string name="cc1_3"><b>Total Weeks</b></string>
    <string name="cc_2"><b>2. Weight (kg) (as mentioned in MAMTA Card)</b></string>
    <string name="cc_3"><b>IN CASE OF INELIGIBILITY\n(EXIT CASE)</b></string>
    <string name="cc3_1"><b>If No ANC has been done then mention the reason for non-compliance\n\tMiscarriage/abortion (1)\n\tMaternal Death (2)\n\tMigrated elsewhere (3)\n\tOther (please specify) (4)</b></string>
    <string name="hcc1_2">Enter Date</string>
    <string name="hcc1_3">Elapsed Weeks</string>
    <string name="hcc2">Enter Weight</string>
    <string name="hcc3_1">Enter reason</string>
    <string name="fifth_installment">Fifth Installment</string>
    <string name="ffi_1">1. Is child alive?</string>
    <string name="ffi_2">Current weight of the child(kg)</string>
    <string name="ffi_3">Has child received first cycle of vaccinations</string>
    <string name="ffi_3_1">(BCG)</string>
    <string name="ffi_3_2">(Hepatitis)</string>
    <string name="ffi_3_3">(OPV- 0,1,2)</string>
    <string name="ffi_3_4">(Pentavelent 1 and 2)</string>
    <string name="ffi_4">IN CASE OF INELIGIBILITY\n(EXIT CASE)</string>
    <string name="ffi_4_1">If beneficiary not eligible any more, enter reason\n\t(1) Rajshree Beneficiary\n\t(2) Maternal Death\n\t(3) Migrated elsewhere\n\t(4) Other(please specify)</string>
    <string name="hffi_2">Enter child\'s weight</string>
    <string name="hffi_4_1">Enter reason</string>
</resources>