<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/box_form">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/dimen_1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/FormLinearLayout">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_weight="1"
                    android:text="@string/b1"
                    style="@style/FormTextMini"/>

                <Spinner
                    android:id="@+id/spinnerb1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:prompt="@string/adhar1"
                    android:layout_weight="1"
                    android:padding="@dimen/dimes_8dp"
                    android:layout_marginRight="@dimen/text_10dp"
                    android:layout_gravity="right"/>
            </LinearLayout>

            <include layout="@layout/view_divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                style="@style/FormLinearLayout">

                <TextView
                    android:layout_weight="1"
                    android:text="@string/b1_1"
                    style="@style/FormTextMini"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/FormLinearLayout">

                <TextView
                    android:layout_weight="1"
                    android:text="@string/b2"
                    style="@style/FormTextMini"/>

                <EditText
                    android:id="@+id/eb2"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/hb2"
                    style="@style/EditTextStyle" />

            </LinearLayout>

            <include layout="@layout/view_divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/FormLinearLayout">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_weight="1"
                    android:text="@string/b3"
                    style="@style/FormTextMini"/>

                <EditText
                    android:id="@+id/eb3"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hb3"
                    android:inputType="textPersonName"
                    style="@style/EditTextStyle" />
            </LinearLayout>

            <include layout="@layout/view_divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/FormLinearLayout">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_weight="1"
                    android:text="@string/b4"
                    style="@style/FormTextMini"/>

                <EditText
                    android:id="@+id/eb4"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hb4"
                    android:inputType="textPersonName"
                    style="@style/EditTextStyle" />
            </LinearLayout>

            <include layout="@layout/view_divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/FormLinearLayout">

                <TextView
                    android:layout_weight="1"
                    android:text="@string/b5"
                    style="@style/FormTextMini"/>

                <EditText
                    android:id="@+id/eb5"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hb5"
                    android:inputType="number"
                    style="@style/EditTextStyle" />
            </LinearLayout>

            <include layout="@layout/view_divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/FormLinearLayout">

                <TextView
                    android:layout_weight="1"
                    android:text="@string/b6"
                    style="@style/FormTextMini"/>

                <EditText
                    android:id="@+id/eb6"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hb6"
                    android:inputType="textPersonName"
                    style="@style/EditTextStyle" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
</RelativeLayout>