<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/box_form">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/dimen_1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/FormLinearLayout">

                <TextView
                    style="@style/FormTextMini"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:alpha="0.5"
                    android:text="@string/fifth_installment" />

            </LinearLayout>

            <include layout="@layout/view_divider"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/FormLinearLayout">

                <TextView
                    android:id="@+id/textView17"
                    style="@style/FormTextMini"
                    android:layout_weight="1"
                    android:text="@string/ffi_1" />

                <Spinner
                    android:id="@+id/spinner_1"
                    android:layout_width="@dimen/dimen_300dp"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:spinnerMode="dropdown"
                    android:layout_weight="1"
                    android:padding="@dimen/dimes_8dp"
                    android:layout_marginRight="@dimen/text_10dp"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <include layout="@layout/view_divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/FormLinearLayout">

                <TextView
                    style="@style/FormTextMini"
                    android:layout_weight="1"
                    android:text="@string/ffi_2" />

                <EditText
                    android:id="@+id/effi_2"
                    style="@style/EditTextStyle"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hffi_2"
                    android:inputType="number"
                    android:maxLength="2"/>

            </LinearLayout>

            <include layout="@layout/view_divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/FormLinearLayout">

                <TextView
                    android:id="@+id/textView9"
                    style="@style/FormTextMini"
                    android:layout_weight="1"
                    android:text="@string/ffi_3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/dimen_300dp"
                android:layout_height="match_parent"
                style="@style/FormLinearLayout"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    style="@style/FormTextMini"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/ffi_3_1" />

                <Spinner
                    android:id="@+id/spinner_3_1"
                    android:layout_width="@dimen/dimen_125dp"
                    android:layout_height="match_parent"
                    android:spinnerMode="dropdown"
                    android:prompt="@string/adhar1"
                    android:padding="@dimen/dimes_8dp"
                    android:layout_marginRight="@dimen/text_10dp"
                    android:layout_gravity="right"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/dimen_300dp"
                android:layout_height="match_parent"
                style="@style/FormLinearLayout"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1"
                    style="@style/FormTextMini"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/ffi_3_2" />

                <Spinner
                    android:id="@+id/spinner_3_2"
                    android:layout_width="@dimen/dimen_125dp"
                    android:layout_height="match_parent"
                    android:spinnerMode="dropdown"
                    android:padding="@dimen/dimes_8dp"
                    android:layout_marginRight="@dimen/text_10dp"
                    android:layout_gravity="right"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/dimen_300dp"
                android:layout_height="match_parent"
                style="@style/FormLinearLayout"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    style="@style/FormTextMini"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/ffi_3_3" />

                <Spinner
                    android:id="@+id/spinner_3_3"
                    android:layout_width="@dimen/dimen_125dp"
                    android:layout_height="match_parent"
                    android:spinnerMode="dropdown"
                    android:padding="@dimen/dimes_8dp"
                    android:layout_marginRight="@dimen/text_10dp"
                    android:layout_gravity="right"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/dimen_300dp"
                android:layout_height="match_parent"
                style="@style/FormLinearLayout"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/FormTextMini"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/ffi_3_4" />

                <Spinner
                    android:id="@+id/spinner_3_4"
                    android:layout_width="@dimen/dimen_125dp"
                    android:layout_height="match_parent"
                    android:spinnerMode="dropdown"
                    android:padding="@dimen/dimes_8dp"
                    android:layout_marginRight="@dimen/text_10dp"
                    android:layout_gravity="right"/>
            </LinearLayout>

            <include layout="@layout/view_divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/FormLinearLayout">

                <TextView
                    style="@style/FormTextMini"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/ffi_4" />

            </LinearLayout>

            <include layout="@layout/view_divider"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/FormLinearLayout">

                <TextView
                    android:id="@+id/textView12"
                    style="@style/FormTextMini"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/ffi_4_1" />


                <EditText
                    android:id="@+id/effi_4_2"
                    style="@style/EditTextStyle"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hffi_4_1"
                    android:inputType="textPersonName" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</RelativeLayout>
</RelativeLayout>