<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/box_form">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/dimen_1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/FormLinearLayout">

                    <TextView
                        android:id="@+id/secondThirdTextView"
                        style="@style/FormTextMini"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:alpha="0.5"
                        android:text="Second Installment" />

                </LinearLayout>

                <include layout="@layout/view_divider"/>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/FormLinearLayout">


                    <TextView
                        android:id="@+id/textView18"
                        style="@style/FormTextMini"
                        android:layout_weight="1"
                        android:text="@string/cc1" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/FormLinearLayout"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/FormTextMini"
                        android:layout_weight="1"
                        android:text="@string/cc1_2" />

                    <RelativeLayout
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_width="300dp"
                        android:layout_gravity="center">

                        <EditText
                            android:id="@+id/ecc1_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:editable="false"
                            android:focusable="false"
                            android:inputType="date"
                            android:hint="@string/hcc1_2"
                            style="@style/EditTextStyle" />

                        <ImageButton
                            android:id="@+id/imageButtonPg2_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_weight="1"
                            android:background="@null"
                            android:padding="@dimen/dimes_8dp"
                            android:layout_marginRight="@dimen/text_10dp"
                            android:layout_gravity="right"
                            app:srcCompat="@drawable/ic_date_range_black_24dp" />

                    </RelativeLayout>
                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/FormLinearLayout"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        style="@style/FormTextMini"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:layout_gravity="center_vertical"
                        android:text="@string/cc1_3" />

                    <EditText
                        android:id="@+id/ecc1_3"
                        android:layout_weight="1"
                        android:ems="10"
                        android:maxLength="2"
                        android:inputType="number"
                        android:hint="@string/hcc1_3"
                        style="@style/EditTextStyle" />
                </LinearLayout>

                <include layout="@layout/view_divider"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/FormLinearLayout">

                    <TextView
                        android:id="@+id/textView10"
                        style="@style/FormTextMini"
                        android:layout_weight="1"
                        android:text="@string/cc_2" />

                    <EditText
                        android:id="@+id/ecc_2"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/hcc2"
                        android:maxLength="3"
                        android:inputType="number"
                        style="@style/EditTextStyle" />
                </LinearLayout>

                <include layout="@layout/view_divider"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/FormLinearLayout">

                    <TextView
                        android:id="@+id/textView12"
                        style="@style/FormTextMini"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/cc_3" />

                </LinearLayout>

                <include layout="@layout/view_divider"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/FormLinearLayout">

                    <TextView
                        android:id="@+id/textView13"
                        style="@style/FormTextMini"
                        android:layout_weight="1"
                        android:text="@string/cc3_1" />

                    <EditText
                        android:id="@+id/ecc3_1"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/hcc3_1"
                        android:inputType="textPersonName"
                        style="@style/EditTextStyle" />
                </LinearLayout>








            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>